--- a/SignUp.html
+++ b/SignUp.html
@@ -51,8 +51,9 @@
     </div>
     <v-app id="app">
         <div class="container mb-5 mt-0 my-md-5">
-            <div class="row justify-content-center">
-                <div class="col-11 col-md-4">
+            <div class="row justify-content-center position-relative">
+
+                <div class="col-11 col-md-6 fixed-slider">
                     <div class="row logSlider">
                         <div class="px-3 py-5 pt-md-5 pb-md-0">
                             <div class="row">
@@ -104,7 +105,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-11 col-md-8 p-0 p-md-5">
+                <div class="col-11 col-md-6 p-0">
                     <div class="col-12 form-card border px-0">
                         <div class="col-12 test p-5">
                             <div class="big-heading">Create New Account!</div>
