--- a/SignUp.html
+++ b/SignUp.html
@@ -58,9 +58,17 @@
                         <div class="px-3 py-5 pt-md-5 pb-md-0">
                             <div class="row">
                                 <div class="col-12 text-left my-2 my-md-0">
-                                    <div><span class="pr-3 mini-heading">Sign Up to</span> <span
-                                            class="text-underline-one big-heading">Edit
-                                            Projects</span></div>
+                                    <div>
+                                        <span class="pr-3 mini-heading">Sign Up to</span>
+                                        <div class="position-relative big-heading d-inline ml14 ">
+                                            <span class="text-wrapper">
+                                                <span class="letters">
+                                                    Edit Projects
+                                                </span>
+                                                <span class="line"></span>
+                                            </span>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="col-12 imgContainer">
                                     <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
@@ -74,9 +82,16 @@
                         <div class="px-3 py-5 pt-md-5 pb-md-0">
                             <div class="row">
                                 <div class="col-12 text-left">
-                                    <div><span class="pr-3 mini-heading">Sign Up to</span><span
-                                            class="text-underline-one big-heading">Add new
-                                            projcets</span></div>
+                                    <div><span class="pr-3 mini-heading">Sign Up to</span>
+                                        <div class="position-relative big-heading d-inline ml14 ">
+                                            <span class="text-wrapper">
+                                                <span class="letters">
+                                                    Add New Projects
+                                                </span>
+                                                <span class="line"></span>
+                                            </span>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="col-12 imgContainer">
                                     <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
@@ -90,9 +105,16 @@
                         <div class="px-3 py-5 pt-md-5 pb-md-0">
                             <div class="row">
                                 <div class="col-12 text-left">
-                                    <h6><span class="pr-3 mini-heading">Sign Up to</span> <span
-                                            class="text-underline-one big-heading">Have a
-                                            Dashboard</span></h6>
+                                    <div><span class="pr-3 mini-heading">Sign Up to</span>
+                                        <div class="position-relative big-heading d-inline ml14 ">
+                                            <span class="text-wrapper">
+                                                <span class="letters">
+                                                    Have A Dashboard
+                                                </span>
+                                                <span class="line"></span>
+                                            </span>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="col-12 imgContainer">
                                     <div class="sliderImgWrapper px-0 pt-0 pb-0 px-md-4 pt-md-5 pb-md-0">
@@ -233,6 +255,41 @@
             },
 
         })
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+    <script>
+        // Wrap every letter in a span
+
+
+        $('.ml14 .letters').html(function (index, html) {
+            return html.replace(/\S/g, '<span class="letter">$&</span>');
+        });
+
+
+        anime.timeline({loop: true})
+            .add({
+                targets: '.ml14 .line',
+                scaleX: [0, 1],
+                opacity: [0.5, 1],
+                easing: "easeInOutExpo",
+                duration: 900
+            }).add({
+                targets: '.ml14 .letter',
+                opacity: [0, 1],
+                translateX: [40, 0],
+                translateZ: 0,
+                scaleX: [0.3, 1],
+                easing: "easeOutExpo",
+                duration: 750,
+                offset: '-=600',
+                delay: (el, i) => 150 + 25 * i
+            }).add({
+                targets: '.ml14',
+                opacity: 0,
+                duration: 1000,
+                easing: "easeOutExpo",
+                delay: 30
+            });
     </script>
     <script src="./js/main.js"></script>
 </body>
