--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 
                 <div class="col-11 col-md-7 col-lg-8 px-1 px-md-5">
-                    <div class="row logSlider">
+                    <div class="row logSlider px-0 px-md-5">
                         <div class="px-3 py-5 pt-md-5 pb-md-0">
                             <div class="row">
                                 <div class="col-12 text-left my-2 my-md-0">
@@ -131,7 +131,7 @@
                     </div>
                 </div>
 
-                <div class="col-11 col-md-5 col-lg-4 form-card border p-5">
+                <div class="col-11 col-md-5 col-lg-4 form-card border form-container p-5">
                     <h5>Create New Account!</h5>
                     <div class="form-row">
                         <v-form class="w-100">
